--- a/app/react/components/sizung/components/DeliverableInTimeline/index.css
+++ b/app/react/components/sizung/components/DeliverableInTimeline/index.css
@@ -1,12 +1,9 @@
 .root {
   composes: hover-container from '../../styles/modules/hover.css';
-  margin-top: 15px;
-  margin-left: 15px;
-  margin-bottom: 5px;
-}
-
-.row {
   composes: row from global;
+  margin-top: 15px;
+  margin-left: 12px;
+  margin-bottom: 5px;
 }
 
 .user-container {
